# supervisor

./: .env.example  .gitignore  .railwayignore  Dockerfile  README.md  UI_INTEGRATION_RESEARCH.md  config.py  example.py  graph.py  langgraph.json  models.py  pyproject.toml  railway.json  requirements.txt  server.py
agents/: generic_worker.py  state.py  supervisor.py
agents/prompts/: PROMPT_GENERIC_WORKER.md  __init__.py
api/: composio_proxy.py
tools/: composio_tools.py  memory_tools.py  openai_retry_middleware.py  runtime_tool_store.py  secrets_store.py  spawn_worker.py  think_tool.py  user_context_store.py
