[project]
name = "supervisor"
version = "0.1.3"
description = "Supervisor-Worker Architecture for Multi-Step Integration Tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # LangChain ecosystem
  "langchain>=1.1.2",
  "langchain-core>=1.1.1",
  "langchain-openai>=1.1.0",
  "langgraph>=1.0.4",
  "langgraph-api==0.5.33",
  "langgraph-cli[inmem]>=0.4.7",
  "langgraph-checkpoint>=3.0.1,<4.0.0",
  "langgraph-checkpoint-postgres>=3.0.1,<4.0.0",
  
  # Pinecone for tool search
  "langchain-pinecone>=0.2.13",
  "pinecone<8.0.0",
  
  # Composio for tool integration
  "composio==0.9.4",
  "composio-langchain==0.9.4",
  
  # Core dependencies
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.100.0",  # For Composio proxy API
  
  # Langfuse for tracing (latest version)
  "langfuse>=3.10.5",
  
  # ToolHub for semantic tool search
  "tool-hub @ git+https://github.com/seer-engg/tool_hub.git"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "agents",
  "tools",
]

[tool.setuptools.package-data]
"*" = ["**/*.json", "**/*.txt"]

